[update] updates host correct/incorrect button spacing, host-question font

--- a/public/style.css
+++ b/public/style.css
@@ -871,6 +871,7 @@ img {
 	text-align: center;
 	font-weight: bolder;
 	font-size: 1.5em;
+	font-family: "Korinna-BT";
 }
 
 a#activateUsers {
@@ -884,14 +885,14 @@ a.button1.a {
 }
 
 .correct {
+	color: white !important;
 	font-family: "Gyparody";
 	padding: 0.25em;
 	font-size: 6em;
   background: #09b209;
   background-color: #09b209;
   box-shadow: 0px 10px 0px 0px #067c06, 0px 0px 20px 0px #bbb;
-  margin-left: 9vw;
-  margin-right: 5vw;
+  margin-left: 8vw;
 }
 
 .correct:active {
@@ -905,13 +906,13 @@ a.button1.a {
 	background: #ec0404;
 	background-color: #ec0404;
 	box-shadow: 0px 10px 0px 0px #a50202, 0px 0px 20px 0px #bbb;
-	margin-left: 5vw;
 }
 
 .disable {
- background: #d2cece;
- background-color: #d2cece;
- box-shadow: 0px 10px 0px 0px #939090, 0px 0px 20px 0px #bbb;
+	color: white !important;
+ 	background: #d2cece;
+ 	background-color: #d2cece;
+ 	box-shadow: 0px 10px 0px 0px #939090, 0px 0px 20px 0px #bbb;
 }
 
 .incorrect:active {
